POWR-2519 Fix footer spacing between elements

--- a/web/themes/custom/cloudy/src/css/_pages.scss
+++ b/web/themes/custom/cloudy/src/css/_pages.scss
@@ -43,13 +43,6 @@ h1.homepage-title {
   }
 }
 
-// Applies sizing to headings in footer.
-.cloudy-footer {
-  h2 {
-    @include type-style($cloudy-heading-6);
-  }
-}
-
 // Applies margin to headings in cards
 .card {
   h4 {
